[gd_scene load_steps=14 format=2]

[ext_resource path="res://tscn/cotndle.gd" type="Script" id=1]
[ext_resource path="res://tscn/Guess.tscn" type="PackedScene" id=2]
[ext_resource path="res://tscn/cotndle.tres" type="Theme" id=3]
[ext_resource path="res://fonts/necrosans.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://tscn/Help.tscn" type="PackedScene" id=5]
[ext_resource path="res://tscn/Mystery.gd" type="Script" id=6]
[ext_resource path="res://assets/misc_heart_container_cursed.png" type="Texture" id=7]
[ext_resource path="res://assets/ring_gold.png" type="Texture" id=8]
[ext_resource path="res://assets/red_dragon.png" type="Texture" id=9]
[ext_resource path="res://assets/misc_heart_container.png" type="Texture" id=10]
[ext_resource path="res://assets/heart_transplant.png" type="Texture" id=11]
[ext_resource path="res://tscn/Dropdown_option.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="cotndle" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 3 )

[node name="LineEdit" type="LineEdit" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = 64.0
margin_right = -329.0
margin_bottom = -489.0
align = 1
max_length = 40
placeholder_text = "enter monster name"
script = ExtResource( 12 )

[node name="dropdown" type="Label" parent="Control/LineEdit"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 4.817
margin_top = -3.0
margin_bottom = 2.60098
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "
Available name 1

Available name 2

Available name 3

Available name 4

Available name 5"
align = 1

[node name="Polygon2D" type="Polygon2D" parent="Control/LineEdit"]
z_index = -1
color = Color( 0, 1, 0.717647, 1 )
polygon = PoolVector2Array( 0, 48, 376, 48, 376, 224, 0, 224 )

[node name="Line2D" type="Line2D" parent="Control"]
visible = false
points = PoolVector2Array( 312, 56, 704, 56, 704, 120, 312, 120, 312, 56 )
width = 5.0
default_color = Color( 1, 0, 0, 1 )

[node name="Button" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 882.0
margin_top = 19.0
margin_right = -19.0
margin_bottom = -545.0
text = "reset"

[node name="Label" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 312.0
margin_top = 8.0
margin_right = -328.0
margin_bottom = -544.0
text = "Can you guess today's monster Priority?"
align = 1
valign = 1

[node name="Guesses" type="Node2D" parent="Control"]
z_index = -2

[node name="Guess1" parent="Control/Guesses" instance=ExtResource( 2 )]
position = Vector2( 169, 160 )

[node name="Guess2" parent="Control/Guesses" instance=ExtResource( 2 )]
position = Vector2( 169, 240 )

[node name="Guess3" parent="Control/Guesses" instance=ExtResource( 2 )]
position = Vector2( 169, 320 )

[node name="Guess4" parent="Control/Guesses" instance=ExtResource( 2 )]
position = Vector2( 169, 400 )

[node name="Guess5" parent="Control/Guesses" instance=ExtResource( 2 )]
position = Vector2( 169, 480 )

[node name="Guess6" parent="Control/Guesses" instance=ExtResource( 2 )]
position = Vector2( 169, 560 )

[node name="Mystery" type="Button" parent="Control"]
anchor_left = 0.023
anchor_top = 0.04
anchor_right = 0.086
anchor_bottom = 0.147
margin_left = 0.447998
margin_top = -1.90735e-06
margin_right = -0.064003
margin_bottom = -0.199997
custom_fonts/font = SubResource( 1 )
toggle_mode = true
text = "?"
script = ExtResource( 6 )

[node name="Help" parent="Control/Mystery" instance=ExtResource( 5 )]
visible = false
position = Vector2( 292, 56 )
z_index = 10

[node name="help_ui" type="Node2D" parent="Control"]

[node name="RedDragon" type="Sprite" parent="Control/help_ui"]
position = Vector2( 201, 560 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 9 )

[node name="MiscHeartContainerCursed" type="Sprite" parent="Control/help_ui"]
position = Vector2( 296, 560 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="MiscHeartContainer" type="Sprite" parent="Control/help_ui"]
position = Vector2( 472, 560 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="HeartTransplant" type="Sprite" parent="Control/help_ui"]
position = Vector2( 648, 560 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="RingGold" type="Sprite" parent="Control/help_ui"]
position = Vector2( 744, 560 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[connection signal="text_changed" from="Control/LineEdit" to="Control/LineEdit" method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="Control/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Control/Mystery" to="Control/Mystery" method="_on_Mystery_toggled"]
